applications/entto/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entto-backend
spec:
  selector:
    matchLabels:
      app: entto-backend
  replicas: 2
  template:
    metadata:
      labels:
        app: entto-backend
        tier: backend
        createdby: argocd
    spec:
      containers:
      - image: sororiri/entto-backend:0.0.3
        imagePullPolicy: Always
        name: entto-backend
        ports:
        - containerPort: 80
        volumeMounts:
          - name: entto-mount
            mountPath: /app/uploads_
        resources:
          requests:
            memory: "400Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "500m"
      volumes:
      - name: entto-mount
        persistentVolumeClaim:
          claimName: entto-nfs-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entto-front
spec:
  selector:
    matchLabels:
      app: entto-front
      createdby: argocd
  replicas: 1
  template:
    metadata:
      labels:
        app: entto-front
    spec:
      containers:
      - image: sororiri/entto-front:0.0.3
        imagePullPolicy: Always
        name: entto-front
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "400Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "500m"
